Clean Neo4j version with simplified dashboard

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,9 @@ transformers
 streamlit
 plotly
 matplotlib
+gunicorn
+neo4j
+python-dotenv
+networkx
+scikit-learn
 # Note: tkinter comes pre-installed with Python, no need to add it to requirements.txt 
