--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -1,14 +1,15 @@
 version: '3.4'
 
 services:
-  smarttrashaiver10:
-    image: smarttrashaiver10
+  smart-trash-ai:
+    image: smart-trash-ai
     build:
       context: .
       dockerfile: ./Dockerfile
-    command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 -m flask run --no-debugger --no-reload --host 0.0.0.0 --port 5001"]
     ports:
       - 5001:5001
-      - 5678:5678
-    environment:
-      - FLASK_APP=app.py
+    env_file:
+      - .env
+    volumes:
+      - ./:/app
+    command: ["sh", "-c", "pip install debugpy -t /tmp && python /tmp/debugpy --wait-for-client --listen 0.0.0.0:5678 app.py"]
